--- a/Assignments/Assignment6/assignment6.tex
+++ b/Assignments/Assignment6/assignment6.tex
@@ -188,9 +188,9 @@ Expanding equation \eqref{eq:solu_1} along row 1 gives
 \implies \boxed{h=\frac{171}{20}} \label{eq:result2}
 \end{align}
 \section{Solution}
-If $h=\frac{17}{2}}$ or $h=\frac{171}{20}}$, the equation given will represent two straight lines.\\
+If $h=\frac{17}{2}$ or $h=\frac{171}{20}$, the equation given will represent two straight lines.\\
 \\
-Sub $h=\frac{17}{2}}$ in equation \eqref{eq:question} we get,
+Sub $h=\frac{17}{2}$ in equation \eqref{eq:question} we get,
 \begin{align}
 6x^2+17xy+12y^2+22x+31y+20=0 \label{eq:op1}
 \end{align}
@@ -262,7 +262,7 @@ Equation \eqref{eq:line1} represents equations of two straight lines.\\
 
 
 
-Similarly, Sub $h=\frac{171}{20}}$ in equation \eqref{eq:question} we get,
+Similarly, Sub $h=\frac{171}{20}$ in equation \eqref{eq:question} we get,
 \begin{align}
 20x^2+57xy+40y^2+\frac{220}{3}x+\frac{310}{3}y+\frac{200}{3}=0 \label{eq:op2}
 \end{align}
