--- a/Assignments/Assignment8/Assignment8.tex
+++ b/Assignments/Assignment8/Assignment8.tex
@@ -173,7 +173,7 @@ and through what angle must the axes be turned in order to obtain
 
 The general second order equation can be expressed as follows,
 \begin{align}
-\vec{x^T}\vec{V}\vec{x}+2\vec{u^T}\vec{x}+f=0\label{eq1}
+\vec{x^T}\vec{V}\vec{x}+2\vec{u^T}\vec{x}+f=0\label{eq:eq1}
 \end{align}
 Comparing \eqref{eq:q1} with \eqref{eq:eq1},
 \begin{align}
@@ -281,8 +281,8 @@ From equation \eqref{eq:eq16},if the axes is turned by $\theta$ then the equatio
 \renewcommand{\thefigure}{\arabic{figure}}
 \begin{figure}[h!]
 	\centering
-	\includegraphics[width=\columnwidth]{hyperbola1.png}
-	\caption{Hyperbola plot when origin is shifted}
+	\includegraphics[width=\columnwidth]{hyperbola.png}
+	\caption{Hyperbola plot when origin is shifted and rotated}
 	\label{myfig}
 \end{figure}
 \\\end{document}
