--- a/Challenge_Problems/challenge_6/challenge6.tex
+++ b/Challenge_Problems/challenge_6/challenge6.tex
@@ -162,7 +162,7 @@ From \eqref{eq:eq1}, let us assume that the result is true for $n\geq2$ (inducti
 \begin{align}
     \det{\myvec{1&\alpha_1&\alpha_1^2&\cdots&\alpha_1^{n-1}\\1&\alpha_2&\alpha_2^2&\cdots&\alpha_2^{n-1}\\\vdots&\vdots&\vdots&\vdots&\vdots\\1&\alpha_n&\alpha_n^2&\cdots&\alpha_n^{n-1}}} = \prod_{1\leq i<j\leq n} (\alpha_{j}-\alpha_{i}) \label{eq:eq2}
 \end{align}
-Let us consider a $(n\times1)\times(n\times1)$ matrix,
+Let us consider a $(n+1)\times(n+1)$ matrix,
 \begin{align}
     A = \myvec{1&\alpha_1&\alpha_1^2&\cdots&\alpha_1^{n}\\1&\alpha_2&\alpha_2^2&\cdots&\alpha_2^{n}\\\vdots&\vdots&\vdots&\vdots&\vdots\\1&\alpha_{n+1}&\alpha_{n+1}^2&\cdots&\alpha_{n+1}^{n}}\\
 \xleftrightarrow[R_{n-1}\leftarrow R_{n-1}-R_1]{R_n\leftarrow R_n-R_1}
