--- a/Assignments/Assignment15/assignment15.tex
+++ b/Assignments/Assignment15/assignment15.tex
@@ -171,15 +171,15 @@ Substituting in equation \eqref{eq:eq1}
 \end{align}
 From equation \eqref{eq:eq2}, we can say that $n$ is even.\\
 
-Example: Let us consider a vector space $\vec{V}$, such that $\vec{V} \in \mathbb{R}^2$ and let us consider a linear transformation $\vec{T} : \vec{V} \xrightarrow{}  \vec{V}$ defined by $\vec{T}(x,y) = (y, 0)$ and is given by matrix $\vec{M}$\\
+Example: Let us consider a vector space $\vec{V}$, such that $\vec{V} \in \mathbb{R}^2$ and let us consider a linear transformation $\vec{T} : \vec{V} \xrightarrow{}  \vec{V}$ defined by $\vec{T}\myvec{x\\y} = \myvec{y\\0}$ and is given by matrix $\vec{M}$\\
 \begin{align}
-    \vec{T}(x,y) = (y, 0)\\
+    \vec{T}\myvec{x\\y} = \myvec{y\\0}\\
     \vec{M} = \myvec{0&1\\0&0} \label{eq:eq5}
 \end{align}
-Let us consider basis of $\mathbb{R}^2$ $\{(1,0), (0,1)\}$ and apply linear transformation on it.
+Let us consider basis of $\mathbb{R}^2$ $\left\{\myvec{1\\0}, \myvec{0\\1}\right\}$ and apply linear transformation on it.
 \begin{align}
-    \vec{T}(1,0) = (0, 0)\\
-    \vec{T}(0,1) = (1, 0)
+    \vec{T}\myvec{1\\0} = \myvec{0\\0}\\
+    \vec{T}\myvec{0\\1} = \myvec{1\\0}
 \end{align}
 From \eqref{eq:eq5},\\
 The range of matrix can be found from row reduced echelon form. But as matrix $\vec{M}$ is in RREF form,\\
