--- a/Assignments/Assignment17/assignment17.tex
+++ b/Assignments/Assignment17/assignment17.tex
@@ -186,8 +186,10 @@ Let $\{\vec{\alpha_1}, \vec{\alpha_2}, \cdots, \vec{\alpha_n}\}$ be an ordered b
 & From equation \eqref{eq:eq1} and \eqref{eq:eq2}, columns of $\vec{A}$ generate the range of T.
 \\ [0.5ex]
 \hline
-\text{} & 
-Since any generating set contains a basis for the generated space, \\&we can say that the columns of $\vec{A}$ contains a basis of the range of T.
+\text{W spanned by column vectors $\vec{A}$} & 
+Since any generating set contains a basis for the generated space, \\&we can say that the columns of $\vec{A}$ contains a basis of the range of T.\\
+&As W is spanned by column vectors of $\vec{A}$, we can say that W \\
+&contains a basis for the range of T.
 \\ [0.5ex]
 \hline
 \end{tabular}
