--- a/Assignments/Assignment18/assignment18.tex
+++ b/Assignments/Assignment18/assignment18.tex
@@ -47,7 +47,6 @@
 
 \DeclareMathOperator*{\Res}{Res}
 \DeclareMathOperator{\range}{range}
-\DeclareMathOperator{\ortext}{or}
 
 \renewcommand\thesection{\arabic{section}}
 \renewcommand\thesubsection{\thesection.\arabic{subsection}}
@@ -197,8 +196,8 @@ Refer Table \ref{table:1}.
 & Since,\\
 & \parbox{10cm}{\begin{align}
     f(\vec{b}).g(\vec{b})=0 \quad \forall \vec{b} \in \vec{B}\\
-    \implies f(\vec{b})=0 \ortext g(\vec{b})=0\\
-    \implies \vec{b} \in \vec{B_1} \ortext \vec{b} \in \vec{B_2}
+    \implies f(\vec{b})=0 \text{ or } g(\vec{b})=0\\
+    \implies \vec{b} \in \vec{B_1} \text{ or } \vec{b} \in \vec{B_2}
 \end{align}}
 \\ [0.5ex]
 \hline
@@ -212,7 +211,7 @@ Let us choose $\vec{b_1} \in \vec{B_1}-\vec{B_2}$ and $\vec{b_2} \in \vec{B_2}-\
     = f(\vec{b_2}).g(\vec{b_1}) \not= 0 \label{eq:eq6}
 \end{align}}\\
 & Equation \eqref{eq:eq6} is contradiction to the fact that $f(\vec{v}).g(\vec{v})=0$.\\
-& $\implies \boxed{f=0 \ortext g=0}$
+& $\implies \boxed{f=0 \text{ or } g=0}$
 \\ [0.5ex]
 \hline
 \end{tabular}
