--- a/Assignments/Assignment19/assignment19.tex
+++ b/Assignments/Assignment19/assignment19.tex
@@ -194,6 +194,8 @@ Refer Table \ref{table:1}.
     \implies \alpha\vec{x^Tx} = \lambda \vec{x^Tx} \label{eq:eq18}
 \end{align}} \\
 & From equation \eqref{eq:eq18}, $\lambda = \alpha$ as $\norm{\vec{x}} \not = 0$\\
+& As rank($\vec{A^TA}$) = rank($\vec{A}$) = $m$ and equation \eqref{eq:eq18} satisfies the condition in question.\\
+&Therefore the only non-zero eigen value is $\alpha$\\
 & $\vec{A^TA}$ has an eigenvalue $\alpha$ with multiplicity $m$.
 \\ [0.5ex]
 \hline
